--- a/rsac-toc.html
+++ b/rsac-toc.html
@@ -1,5 +1,5 @@
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/polymer-signals/polymer-signals.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../polymer-signals/polymer-signals.html">
 
 <polymer-element name="rsac-toc" on-click="{{toggleToc}}">
   <template>
